--- a/src/static/spinit.html
+++ b/src/static/spinit.html
@@ -2,6 +2,7 @@
 <head>
     <title>Instant Spinner Button!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <link rel="stylesheet" href="/static/spinit.css" type="text/css" media="screen">
     <script
             src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -10,10 +11,9 @@
 </head>
 <body>
 <div id="maincontent" align="center">
+    <h1>Spint IT!</h1>
     <div class="spinitbutton">
-        <div>
-            <button id="spinbutton"></button>
-        </div>
+        <button id="spinbutton"></button>
     </div>
 </div>
 <script>
