motivation workds update

--- a/src/static/spinit.html
+++ b/src/static/spinit.html
@@ -32,7 +32,12 @@
             'Где-то грустит котик, кликай?!',
             'И все-таки она вертится',
             'Все запускайте свои кликеры?',
-            "<code>setInterval(() => jQuery('#spinbutton').click(), 100)</code>"
+            "<code>setInterval(() => jQuery('#spinbutton').click(), 100)</code>",
+            'Твой клик очень важен! - 9379992, кликайте прямо сейчас',
+            'I like to click it, click it',
+            'Первое правило кликального клуба, никому не рассказывать о КК',
+            'Ай, лучше спиннер покручу',
+            'Лучше спиннер в руках, чем журавль в небе'
         ];
         var winWord = 'Да есть жешь, Thank you!';
         $('#spinbutton').click(function() {clickCounter++ });
