--- a/src/static/spinit.html
+++ b/src/static/spinit.html
@@ -48,9 +48,11 @@
                 contentType: 'application/json',
                 url: '/clicks',
                 success: function(data){
-                    $('#speed').text(data + ' кликов/секунду');
+                    var speed = parseFloat(data);
 
-                    if (parseFloat(data) < 1) {
+                    $('#speed').text((Math.floor(speed * 100) / 100) + ' кликов/секунду');
+
+                    if (speed < 1) {
                         $('.motivation-text').html(motivationWords[Math.floor(Math.random()*motivationWords.length)]);
                     } else {
                         $('.motivation-text').html(winWord);
